RESOLVED FIXED27052
Undef ASSERT, to avoid excessive warnings
https://bugs.webkit.org/show_bug.cgi?id=27052
Summary Undef ASSERT, to avoid excessive warnings
Norbert Leser
Reported 2009-07-07 18:45:42 PDT
ASSERT will be defined in both conditional branches of the code following the proposed patch. The explicit undef avoids potential warning messages during compilation.
Attachments
Code patch for Assertion.h (872 bytes, patch)
2009-07-07 18:47 PDT, Norbert Leser
no flags
Second try. (1.08 KB, patch)
2009-07-15 06:05 PDT, Laszlo Gombos
hausmann: review+
Norbert Leser
Comment 1 2009-07-07 18:47:22 PDT
Created attachment 32412 [details] Code patch for Assertion.h 2nd attempt to add attachment - failed first time
Eric Seidel (no email)
Comment 2 2009-07-10 23:13:37 PDT
I don't understand the reason for this patch?
Laszlo Gombos
Comment 3 2009-07-15 06:05:58 PDT
Created attachment 32780 [details] Second try. Changed the patch so that it only impacts the SYMBIAN platform and reflect the intention of this change better. In addition fixed the ChangeLog (filling in for Norbert.) The reason for this patch is to kill the following compiler warning: "\WebKit\JavaScriptCore\wtf\Assertions.h", line 146: Warning: #47-D: incompatible redefinition of macro "ASSERT" (declared at line 3029 of "\epoc32\include\e32def.h") #define ASSERT(assertion) ((void)0)
Laszlo Gombos
Comment 4 2009-07-15 06:09:48 PDT
(In reply to comment #3) > Created an attachment (id=32780) [details] > Second try. > > Changed the patch so that it only impacts the SYMBIAN platform and reflect the > intention of this change better. In addition fixed the ChangeLog (filling in > for Norbert.) > > The reason for this patch is to kill the following compiler warning: > > "\WebKit\JavaScriptCore\wtf\Assertions.h", line 146: Warning: #47-D: > incompatible redefinition of macro "ASSERT" (declared at line 3029 of > "\epoc32\include\e32def.h") > #define ASSERT(assertion) ((void)0) The second patch should obsolete the first patch from Norbert - I do not seems to have rights to make the first patch obsolete.
Holger Freyther
Comment 5 2009-07-15 06:56:25 PDT
Comment on attachment 32412 [details] Code patch for Assertion.h Obsolete according to lazlos.
Simon Hausmann
Comment 6 2009-07-15 07:03:50 PDT
Comment on attachment 32780 [details] Second try. r=me. I'll mention Symbian in the changelog when landing, to make it a bit clearer.
Simon Hausmann
Comment 7 2009-07-15 07:04:22 PDT
Landed in r45907
Note You need to log in before you can comment on or make changes to this bug.