2009-07-15  Norbert Leser  <norbert.leser@nokia.com>

Reviewed by Simon Hausmann.

        Undef ASSERT on Symbian, to avoid excessive warnings
        https://bugs.webkit.org/show_bug.cgi?id=27052

        * wtf/Assertions.h:

Canonical link: https://commits.webkit.org/37537@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45907 268f45cc-cd09-0410-ab3c-d52691b4dbfc